L3/S1/Info/Compil/TD2/mini-python/tests/good/range3.py
l = list(range(7))
for x in l:
    print(x)





