L3/S1/Info/Compil/TD2/mini-python/tests/bad/for1.py
for x in 42:
    print(x)
